# OpenClaw_1

./: .env.example  .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md  run.sh  start.sh
.github/workflows/: ci.yml  deploy.yml
User/: Fundamental_usecase_and_skills.md  Machine_Learning_models.md  OpenClaw_LkkViber_Epic1_1.1.md  OpenClaw_LkkViber_Epic_1.0.md  OpenClaw_LkkViber_PRD_1.0.md  OpenClaw_LkkViber_PRD_1.1.md  OpenClaw_for_replit.md  OpenClaw_for_replit_joblist.md  OpenClaw_for_replit_joblist_1.1.md  OpenClaw_implementation_Plan.md  github_skill.md  sync_test.md
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  job.py  script.py  stock_signal.py  topic.py
backend/data/stock_reports/: st125_TW_2026-04-03.md  st125_TW_2026-04-04.md  st125_TW_2026-04-05.md  st125_TW_2026-04-06.md  st125_TW_2026-04-28.md  st125_TW_2026-04-29.md  st125_TW_2026-04-30.md  st125_TW_2026-05-01.md  st125_US_2026-04-03.md  st125_US_2026-04-04.md  st125_US_2026-04-28.md  st125_US_2026-05-01.md  st125_US_2026-05-02.md
docker/: app.Dockerfile  docker-compose.yml  worker.Dockerfile
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalysisTableWindow.tsx  DailyChartWindow.tsx  StockChartWindow.tsx  ThemeToggle.tsx
frontend/hooks/: useDarkMode.ts
scripts/: backup.sh  reset_docker.sh  setup.sh
skills/github/: SKILL.md
(+16 files in other folders)
